--- a/package.json
+++ b/package.json
@@ -2,7 +2,19 @@
   "name": "eecircuit-engine",
   "version": "1.0.0",
   "description": "EEcircuit's simulation engine",
-  "main": "main.js",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/eecircuit-engine.umd.cjs",
+  "module": "./dist/eecircuit-engine.mjs",
+  "exports": {
+    ".": {
+      "types": "./dist/main.d.ts",
+      "import": "./dist/eecircuit-engine.mjs",
+      "require": "./dist/eecircuit-engine.cjs"
+    }
+  },
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,6 +25,7 @@
   "devDependencies": {
     "@types/node": "^22.13.9",
     "typescript": "^5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-dts": "^4.5.3"
   }
 }
