--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,8 +42,8 @@ jobs:
 
     - name: Rename and Copy Files to Main Directory
       run: |
-        cp ./Docker/build/spice.wasm ./src/sim/spice.wasm
-        cp ./Docker/build/spice-eesim.js ./src/sim/spice.js
+        cp ./Docker/build/spice.wasm ./src/spice.wasm
+        cp ./Docker/build/spice-eesim.js ./src/spice.js
 
     - name: Update Dependencies
       run: npx --yes npm-check-updates -u
