--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eecircuit-engine",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "EEcircuit's simulation engine",
   "files": [
     "dist"
@@ -14,7 +14,6 @@
       "require": "./dist/eecircuit-engine.cjs"
     }
   },
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -23,8 +22,12 @@
   "author": "Danial Chitnis",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@types/node": "^22.13.9",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
     "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0",
     "vite": "^6.2.0",
     "vite-plugin-dts": "^4.5.3"
   }
