--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -1,8 +1,8 @@
-name: Next Build Test Publish
+name: Main Build Test
 
 on:
   schedule:
-    - cron: '0 0 * * 6'  # Runs every Saturday at midnight
+    - cron: '30 0 * * 6'  # Runs every Saturday at midnight
   workflow_dispatch:      # Allows manual triggering
 
 jobs:
@@ -63,18 +63,6 @@ jobs:
     - name: Test
       run: deno --allow-read --allow-write ./test/test.ts
 
-    - name: Get the current version and set dynamic next version
-      run: |
-        CURRENT_VERSION=$(node -p "require('./package.json').version")
-        echo "Current version: $CURRENT_VERSION"
-        NEW_VERSION="${CURRENT_VERSION}-next.$(date +%s)"
-        echo "New version: $NEW_VERSION"
-        npm version "$NEW_VERSION" --no-git-tag-version
-
-    - name: Publish to npm
-      run: npm publish --access public --tag next
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH }}
 
 
 
