Refactor ESLint configuration to use ignores property and update TypeScript config exclusions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "include": ["src", "types"],
+  "exclude": ["src/spice.ts", "src/spice.d.ts"],
   "compilerOptions": {
     "module": "esnext",
     "target": "esnext",
