--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
   },
   "scripts": {
     "dev": "vite",
+    "check": "eslint . --ext .ts",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "npm run build && npm run test:source && npm run test:package",
+    "test:source": "npx tsx test/test.ts",
+    "test:package": "npx tsx test/test-package.ts"
   },
   "author": "Danial Chitnis",
   "license": "MIT",
@@ -26,6 +30,7 @@
     "@types/node": "^24.7.2",
     "eslint": "^9.37.0",
     "globals": "^16.4.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.0",
     "vite": "^7.1.9",
