--- a/.github/workflows/build-next.yml
+++ b/.github/workflows/build-next.yml
@@ -53,19 +53,19 @@ jobs:
       run: npm install
 
     - name: Test node (source)
-      run: npm run test:source
+      run: npm run test:source -- next
     
     - name: Build Project with Vite
       run: npm run build
 
     - name: Test node (package)
-      run: npm run test:package
+      run: npm run test:package -- next
 
     - name: Install browsers
       run: npx playwright install
 
     - name: Test browser
-      run: npm run test:browser
+      run: npm run test:browser -- next
 
     - name: Get the current version and set dynamic next version
       run: |
