Update browser test command to use environment variable

--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -65,7 +65,9 @@ jobs:
       run: npx playwright install
 
     - name: Test browser
-      run: npm run test:browser -- main
+      run: npm run test:browser
+      env:
+        REF_VERSION: main
 
 
 
