--- a/.github/workflows/build-next.yml
+++ b/.github/workflows/build-next.yml
@@ -5,6 +5,10 @@ on:
     - cron: '0 1 * * 6'  # Runs every Saturday at midnight
   workflow_dispatch:      # Allows manual triggering
 
+permissions:
+  id-token: write  # Required for OIDC
+  contents: read
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -78,10 +82,7 @@ jobs:
         npm version "$NEW_VERSION" --no-git-tag-version
 
     - name: Publish to npm
-      run: npm publish --access public --tag next
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH }}
-
+      run: npm publish --tag next
 
 
 
