--- a/.github/workflows/build-next.yml
+++ b/.github/workflows/build-next.yml
@@ -66,7 +66,7 @@ jobs:
       run: npm run test:package -- next
 
     - name: Install browsers
-      run: npx playwright install
+      run: npx playwright install --with-deps
 
     - name: Test browser
       run: npm run test:browser
